--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="fas fa-bars"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"> <a class="nav-link" href="" data-scroll-nav="0">Home</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">About</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="2">Features</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="3">Team</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="4">Testimonials</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="5">Faq</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="6">Contact</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="" data-scroll-nav="0">inicio</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">A cerca de</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="2">Caracteristica</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="3">Equipo</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="4">Testimonios</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="5">Preguntas Frecuentes</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="6">Contactos</a> </li>
       </ul>
     </div>
   </div>
