--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <div class="banner-text">
-            <h2 class="white">Best App Website Template</h2>
-            <h6 class="white">This awesome template designed by <a href="http://w3Template.com" target="_blank" rel="dofollow" class="weblink">W3 Template</a>.</h6>
-            <p class="banner-text white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur hendrerit neque massa, sit amet tristique ante porta ut. In sodales et justo vel vulputate. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+            <h2 class="white">APLICACIONES MOVILES EN REALIDAD AUMENTADA</h2>
+            <h4>¿Qué es la Realidad Aumentada en aplicaciones móviles?</h4>
+            <h6 class="white">La realidad aumentada (RA) es una tecnología que permite superponer elementos digitales (como gráficos, texto, o sonidos) en el mundo real a través de dispositivos móviles. Mediante el uso de la cámara, sensores y GPS del teléfono, las aplicaciones de RA crean una experiencia interactiva donde el usuario puede ver contenido digital integrado en su entorno real.</h6>
+           <!---<p class="banner-text white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur hendrerit neque massa, sit amet tristique ante porta ut. In sodales et justo vel vulputate. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>-->
             <ul>
               <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
               <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
             </ul>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12"> <img src="images/iphone-screen.png" class="img-fluid wow fadeInUp"/> </div>
+        <div class="col-md-4 col-sm-12"> <img src="images/realidad.jpg" class="img-fluid wow fadeInUp"/> </div>
       </div>
     </div>
   </div>
-  <span class="svg-wave"> <img class="svg-hero" src="images/applight-wave.svg"> </span> </section>
+  <span class="svg-wave"> <img class="svg-hero" > </span> </section>
 
 <!-------Banner End-------> 
 
