--- a/index.html
+++ b/index.html
@@ -64,32 +64,32 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center">
-          <h3>About</h3>
+          <h3>A CERCA DE</h3>
           <span class="line"></span>
-          <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p>Los beneficios de las aplicaciones moviles en realidad aumentada</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.2s"> <i class="fa fa-life-ring" aria-hidden="true"></i>
-                <h5>Support</h5>
-                <p>Phasellus lobortis justo a magna facilisis, in commodo tellus rutrum. Sed vitae condimentum nulla.</p>
+                <h5>Experiencia Inmersiva</h5>
+                <p>La RA ofrece una experiencia más envolvente y atractiva, mejorando la interacción entre el usuario y el contenido.</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.4s"> <i class="fa fa-mobile" aria-hidden="true"></i>
-                <h5>Cross Platform</h5>
-                <p>Phasellus lobortis justo a magna facilisis, in commodo tellus rutrum. Sed vitae condimentum nulla.</p>
+                <h5>Aprendizaje Visual:</h5>
+                <p>Las aplicaciones de RA facilitan el aprendizaje a través de visualizaciones 3D de conceptos complejos, útiles en campos como la educación y la medicina.</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.6s"> <i class="fa fa-bolt" aria-hidden="true"></i>
-                <h5>Fast</h5>
-                <p>Phasellus lobortis justo a magna facilisis, in commodo tellus rutrum. Sed vitae condimentum nulla.</p>
+                <h5>Mejora en el Comercio:</h5>
+                <p>Muchas tiendas usan RA para que los clientes prueben productos virtualmente, como muebles, maquillaje o ropa, antes de comprarlos.</p>
               </div>
             </div>
           </div>
-          <a href="#" class="about-btn">Learn More</a> </div>
+          <a href="#" class="about-btn">Leer mas informacion</a> </div>
       </div>
     </div>
   </div>
@@ -100,12 +100,12 @@
 <section class="video-section prelative text-center white">
   <div class="section-padding video-overlay">
     <div class="container">
-      <h3>Watch Now</h3>
+      <h3>Ver Video</h3>
       <i class="fa fa-play" id="video-icon" aria-hidden="true"></i>
       <div class="video-popup">
         <div class="video-src">
           <div class="iframe-src">
-            <iframe src="https://www.youtube.com/embed/Ku52zNnft8k?rel=0&amp;showinfo=0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=7-gbG_yuUE8" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -120,24 +120,24 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center">
-          <h3>Features</h3>
+          <h3>Caracteristicas</h3>
           <span class="line"></span>
-          <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p>Descubre lo que hace única a nuestra aplicación de Realidad Aumentada (RA):</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4 col-sm-12">
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
                 <div class="media-body text-right media-right-margin">
-                  <h5>Fast Processing</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <h5>FInteractividad en Tiempo Real</h5>
+                  <p>Vive experiencias envolventes con objetos y contenido digital que responden de inmediato a tus movimientos y toques en pantalla.</p>
                 </div>
                 <div class="media-right icon-border"> <span class="fa fa-bolt" aria-hidden="true"></span> </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
                 <div class="media-body text-right media-right-margin">
-                  <h5>Low Power Consuming</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <h5>Personalización Completa</h5>
+                  <p>Configura la experiencia según tus preferencias, adaptando el contenido y la interacción a tus necesidades.</p>
                 </div>
                 <div class="media-right icon-border"> <span class="fa fa-battery-full" aria-hidden="true"></span> </div>
               </div>
@@ -150,7 +150,7 @@
               </div>
             </div>
             <div class="col-md-4 d-none d-md-block d-lg-block">
-              <div class="feature-mobile"> <img src="images/iphone-screen-with-shadow.png" class="img-fluid wow fadeInUp"/> </div>
+              <div class="feature-mobile"> <img src="images/movil.jpg" class="img-fluid wow fadeInUp"/> </div>
             </div>
             <div class="col-md-4 col-sm-12">
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
