--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.6s">
                 <div class="media-body text-right media-right-margin">
-                  <h5>Wifi Compatibility</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <h5>Geolocalización Avanzada</h5>
+                  <p>Nuestra tecnología integra elementos digitales en ubicaciones 
+                    del mundo real, ideal para turismo, navegación y juegos</p>
                 </div>
                 <div class="media-right icon-border"> <span class="fa fa-wifi" aria-hidden="true"></span> </div>
               </div>
@@ -156,22 +157,26 @@
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
                 <div class="media-left icon-border media-right-margin"> <span class="fa fa-check-double" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
-                  <h5>Regular Updates</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <h5>Reconocimiento de Imágenes y Objetos</h5>
+                  <p>Activa contenido exclusivo al enfocar objetos o superficies específicos 
+                    con la cámara de tu dispositivo.</p>
                 </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
                 <div class="media-left icon-border media-right-margin"> <span class="fa fa-dollar-sign" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
-                  <h5>Save Money</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <h5>Ofertas Exclusivas y Descuentos</h5>
+                  <p>Aprovecha promociones especiales y descuentos al interactuar 
+                    con productos en realidad aumentada. Obtén 
+                    beneficios únicos al probar productos virtualmente y 
+                    recibir cupones o precios reducidos directamente en la aplicación.</p>
                 </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.6s">
                 <div class="media-left icon-border media-right-margin"> <span class="fa fa-hdd" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
-                  <h5>Unlimited Storage</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <h5>Conexión Segura y Optimizada</h5>
+                  <p>Nuestra aplicación está diseñada para aprovechar la capacidad de tu red y funcionar de manera óptima con routers de alta velocidad. Disfruta de una experiencia fluida en RA, especialmente en contenido interactivo y en tiempo real, gracias a una gestión de datos eficiente que reduce el consumo de ancho de banda y garantiza una conexión estable.</p>
                 </div>
               </div>
             </div>
