--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
                 <div class="media-left icon-border media-right-margin"> <span class="fa fa-hdd" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
                   <h5>Conexión Segura y Optimizada</h5>
-                  <p>Nuestra aplicación está diseñada para aprovechar la capacidad de tu red y funcionar de manera óptima con routers de alta velocidad. Disfruta de una experiencia fluida en RA, especialmente en contenido interactivo y en tiempo real, gracias a una gestión de datos eficiente que reduce el consumo de ancho de banda y garantiza una conexión estable.</p>
+                  <p>Nuestra aplicación está diseñada para aprovechar 
+                    la capacidad de tu red y funcionar de manera óptima con 
+                    routers de alta velocidad. Disfruta de una experiencia fluida en RA.</p>
                 </div>
               </div>
             </div>
@@ -194,28 +196,31 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center">
-          <h3>Our Team</h3>
+          <h3>Equipo</h3>
           <span class="line"></span>
-          <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p>Conoce al equipo de expertos detrás de nuestra aplicación de RA:</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4">
               <div class="team-detail wow bounce" data-wow-delay="0.2s"> <img src="images/user1.jpg" class="img-fluid"/>
-                <h4>Nitu Singh</h4>
-                <p>Marketing Specialist</p>
+                <h4>María López</h4>
+                <h6>Directora de Diseño</h6>
+                <P>Especialista en diseño de interfaces y UX, crea experiencias visuales atractivas y amigables para el usuario.</P>
               </div>
             </div>
             <div class="col-md-4">
               <div class="team-detail wow bounce" data-wow-delay="0.4s"> <img src="images/user2.jpg" class="img-fluid"/>
-                <h4>Yogesh Singh</h4>
-                <p>CEO & Founder</p>
+                <h4>Carlos García</h4>
+                <h6>Líder de Producto</h6>
+                <P>Responsable de la planificación y estrategia, asegura que la aplicación se adapte a las últimas tendencias de RA.</P>
               </div>
             </div>
             <div class="col-md-4">
               <div class="team-detail wow bounce" data-wow-delay="0.6s"> <img src="images/user3.jpg" class="img-fluid"/>
-                <h4>Nisha Sharma</h4>
-                <p>Web Developer</p>
+                <h4>Juan Pérez</h4>
+                <h6>Director de Tecnología</h6>
+                <p>Con años de experiencia en el desarrollo de aplicaciones de RA, Juan lidera el equipo técnico.</p>
               </div>
             </div>
           </div>
