--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center white">
-          <h3>Testimonials</h3>
+          <h3>Testimonios</h3>
           <span class="line"></span>
-          <p class="white">Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p class="white">Lo que dicen nuestros usuarios sobre la experiencia con nuestra aplicación:</p>
         </div>
     
       <div class="section-content">
@@ -249,15 +249,18 @@
             <div class="slider">
               <div class="slider-item">
                 <div class="test-img"><img src="images/user1.jpg" alt="Placeholder" width="157" height="157"></div>
-                <div class="test-text"><span class="title"><span>John Michal</span> Digital Designer</span> Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam eratvo lutpat.</div>
+                <div class="test-text"><span class="title"><span>Laura M</span> Digital Designer</span> “La aplicación ha transformado la forma en que exploro mi ciudad. Es como ver el mundo desde una nueva perspectiva.”
+
+                </div>
               </div>
               <div class="slider-item">
                 <div class="test-img"><img src="images/user3.jpg" alt="Placeholder" width="157" height="157"></div>
-                <div class="test-text"><span class="title"><span>Steve Smith</span> App User</span> Euismod tincidunt ut laoreet dolore magna aliquam eratvo lutpat. Ut wisi enim ad minim veniam, quis nostrud v</div>
+                <div class="test-text"><span class="title"><span>Miguel R</span> Consultor de Ventas</span> 
+                  “Me encanta cómo puedo interactuar con los productos antes de comprarlos. La experiencia de compra se siente mucho más real.”                </div>
               </div>
               <div class="slider-item">
                 <div class="test-img"><img src="images/user3.jpg" alt="Placeholder" width="157" height="157"></div>
-                <div class="test-text"><span class="title"><span>Gordon Shaw</span> Blogger</span> Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam eratvo lutpat. Ut wisi enim ad minim veniam, quis nostrud v</div>
+                <div class="test-text"><span class="title"><span>Carlos S</span> Ingeniero de Software</span>“La aplicación facilita mi trabajo, permitiéndome visualizar proyectos en 3D de una forma interactiva y realista. Es una herramienta invaluable para mi profesión.”</div>
               </div>
             </div>
           </div>
@@ -276,7 +279,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center">
-          <h3>Frequently Asked Questions</h3>
+          <h3>Preguntas Frecuentes</h3>
           <span class="line"></span>
           <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
         </div>
@@ -321,7 +324,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center">
-          <h3>Contact us</h3>
+          <h3>contactos</h3>
           <span class="line"></span>
           <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
         </div>
@@ -331,29 +334,29 @@
               <form id="contact_form" action="">
                 <div class="row">
                   <div class="col">
-                    <input type="text" id="your_name" class="form-input w-100" name="full-name" placeholder="Full Name" required>
+                    <input type="text" id="your_name" class="form-input w-100" name="full-name" placeholder="nombre completo" required>
                   </div>
                   <div class="col">
                     <input type="email" id="email" class="form-input w-100" name="email" placeholder="Email" required>
                   </div>
                 </div>
-                <input type="text" id="subject" class="form-input w-100" name="subject" placeholder="Subject">
-                <textarea class="form-input w-100" id="message" placeholder="Message" name="message"></textarea>
-                <button class="btn-grad w-100 text-uppercase" type="submit" name="button">submit</button>
+                <input type="text" id="subject" class="form-input w-100" name="subject" placeholder="tema">
+                <textarea class="form-input w-100" id="message" placeholder="Mensaje" name="message"></textarea>
+                <button class="btn-grad w-100 text-uppercase" type="submit" name="button">Enviar</button>
               </form>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4">
               <div class="contact-info white">
                 <div class="contact-item media"> <i class="fa fa-map-marker-alt media-left media-right-margin"></i>
                   <div class="media-body">
-                    <p class="text-uppercase">Address</p>
-                    <p class="text-uppercase">New Delhi, India</p>
+                    <p class="text-uppercase">direccion</p>
+                    <p class="text-uppercase">nuevo imperial - cañete</p>
                   </div>
                 </div>
                 <div class="contact-item media"> <i class="fa fa-mobile media-left media-right-margin"></i>
                   <div class="media-body">
-                    <p class="text-uppercase">Phone</p>
-                    <p class="text-uppercase"><a class="text-white" href="tel:+15173977100">009900990099</a> </p>
+                    <p class="text-uppercase">telefono</p>
+                    <p class="text-uppercase"><a class="text-white" href="tel:+15173977100">+51 977 654 321</a> </p>
                   </div>
                 </div>
                 <div class="contact-item media"> <i class="fa fa-envelope media-left media-right-margin"></i>
@@ -364,7 +367,7 @@
                 </div>
                 <div class="contact-item media"> <i class="fa fa-clock media-left media-right-margin"></i>
                   <div class="media-body">
-                    <p class="text-uppercase">Working Hours</p>
+                    <p class="text-uppercase">horario</p>
                     <p class="text-uppercase">Mon-Fri 9.00 AM to 5.00PM.</p>
                   </div>
                 </div>
@@ -385,7 +388,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center white">
-          <h3>Download Our App</h3>
+          <h3>Descragar aplicacion</h3>
           <span class="line"></span>
           <p class="white">Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
         </div>
