--- a/index.html
+++ b/index.html
@@ -281,33 +281,34 @@
         <div class="sectioner-header text-center">
           <h3>Preguntas Frecuentes</h3>
           <span class="line"></span>
-          <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p>¿Tienes dudas sobre nuestra aplicación de Realidad Aumentada? Aquí respondemos a las preguntas más comunes para que disfrutes al máximo de la experiencia. Si tienes alguna otra consulta, no dudes en contactarnos.</p>
         </div>
         <div class="section-content">
           <div class="row">
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.2s">
-              <h4>Nam tellus felis, dignissim quis dui ?</h4>
-              <p>Suspendisse fermentum placerat enim, at pellentesque augue. Nullam elit est, ultricies et tellus ac, euismod placerat orci. Donec commodo.</p>
+              <h4>¿La aplicación está disponible para iOS y Android?</h4>
+              <p>Sí, nuestra aplicación es compatible con ambos sistemas operativos y puede descargarse desde App Store y Google Play.
+              </p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.2s">
-              <h4>Mauris scelerisque, dui non faucibus vulputate ?</h4>
-              <p>Sed tempus in neque ac rhoncus. Phasellus vehicula, erat tempor malesuada egestas, mauris tellus malesuada erat, at vestibulum nulla ex et lectus. Nullam elit est, ultricies et tellus ac, euismod placerat orci.</p>
+              <h4>¿Necesito conexión a internet para usar la aplicación?</h4>
+              <p>La mayoría de las funciones requieren internet para una experiencia completa, aunque algunos contenidos básicos están disponibles sin conexión.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.4s">
-              <h4>Nullam elit est, ultricies et tellus ac ?</h4>
-              <p>Ut vestibulum euismod aliquet. Quisque nec malesuada nibh. Vivamus euismod nunc eu leo faucibus, vel elementum justo posuere. In sed varius nisi. Curabitur id porta ipsum, et vestibulum dui.</p>
+              <h4>¿Es segura la información de ubicación que uso en la aplicación?</h4>
+              <p>Sí, respetamos tu privacidad y cumplimos con todas las normativas de protección de datos, usando la información de geolocalización solo cuando es necesario.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.4s">
-              <h4>Suspendisse fermentum placerat enim, at pellentesque augue elit est ?</h4>
-              <p>Vivamus euismod nunc eu leo faucibus, vel elementum justo posuere. In sed varius nisi.</p>
+              <h4>¿La aplicación es gratuita?</h4>
+              <p>Puedes descargar y usar la versión básica de forma gratuita. También ofrecemos opciones premium con funciones avanzadas.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.6s">
-              <h4>Ut vestibulum euismod aliquet. Quisque nec malesuada nibh ?</h4>
-              <p>Suspendisse fermentum placerat enim, at pellentesque augue. Nullam elit est, ultricies et tellus ac, euismod placerat orci. Donec commodo dapibus congue.</p>
+              <h4>¿Se puede usar la aplicación en múltiples dispositivos?</h4>
+              <p>Sí, puedes instalar la aplicación en varios dispositivos bajo la misma cuenta, lo que te permite mantener tu experiencia y preferencias sincronizadas en todos tus dispositivos.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.6s">
-              <h4>Donec commodo dapibus congue ?</h4>
-              <p>Nullam elit est, ultricies et tellus ac, euismod placerat orci fermentum placerat enim, at pellentesque augue. Nullam elit est, ultricies et tellus ac, euismod placerat orci. Donec commodo dapibus congue.</p>
+              <h4>¿La aplicación consume mucha batería?</h4>
+              <p>Hemos optimizado la aplicación para reducir el consumo de batería, aunque el uso de funciones de realidad aumentada y geolocalización puede requerir más energía en comparación con aplicaciones estándar.</p>
             </div>
           </div>
         </div>
@@ -326,7 +327,7 @@
         <div class="sectioner-header text-center">
           <h3>contactos</h3>
           <span class="line"></span>
-          <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p>Si tienes preguntas, comentarios o necesitas soporte, no dudes en contactarnos:</p>
         </div>
         <div class="section-content">
           <div class="row">
@@ -390,7 +391,9 @@
         <div class="sectioner-header text-center white">
           <h3>Descragar aplicacion</h3>
           <span class="line"></span>
-          <p class="white">Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p class="white">¡Descarga nuestra aplicación y lleva la Realidad Aumentada a tus manos! Explora, aprende e interactúa de una manera completamente nueva. Disponible en App Store y Google Play.
+
+          </p>
         </div>
       </div>
       <div class="col-md-12">
