--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <p>2018 &copy; Applight. Website Designed by <a href="http://w3Template.com" target="_blank" rel="dofollow">W3 Template</a></p>
+        <p>realidad aumentada </p>
       </div>
     </div>
   </div>
