--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <p>realidad aumentada </p>
+        <p>realidad aumentada grupo 4  </p>
       </div>
     </div>
   </div>
