nueva modificacion shirley

--- a/index.html
+++ b/index.html
@@ -286,31 +286,32 @@
         <div class="section-content">
           <div class="row">
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.2s">
-              <h4>¿La aplicación está disponible para iOS y Android?</h4>
-              <p>Sí, nuestra aplicación es compatible con ambos sistemas operativos y puede descargarse desde App Store y Google Play.
-              </p>
+              <h4>¿Está la aplicación disponible en iOS y Android?</h4>
+              <p>Sí, nuestra aplicación es compatible con ambos sistemas operativos y se puede descargar desde la App Store y Google Play.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.2s">
-              <h4>¿Necesito conexión a internet para usar la aplicación?</h4>
-              <p>La mayoría de las funciones requieren internet para una experiencia completa, aunque algunos contenidos básicos están disponibles sin conexión.</p>
+              <h4>¿Es necesario tener conexión a internet para utilizar la aplicación?</h4>
+              <p>La mayoría de las funcionalidades requieren internet para una experiencia óptima, aunque algunos contenidos básicos se pueden acceder sin conexión.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.4s">
-              <h4>¿Es segura la información de ubicación que uso en la aplicación?</h4>
-              <p>Sí, respetamos tu privacidad y cumplimos con todas las normativas de protección de datos, usando la información de geolocalización solo cuando es necesario.</p>
+              <h4>¿Es segura la información de ubicación que se usa en la aplicación?</h4>
+              <p>Sí, valoramos tu privacidad y seguimos todas las normativas de protección de datos, utilizando la información de geolocalización únicamente cuando es necesario.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.4s">
-              <h4>¿La aplicación es gratuita?</h4>
-              <p>Puedes descargar y usar la versión básica de forma gratuita. También ofrecemos opciones premium con funciones avanzadas.</p>
+              <h4>¿La aplicación tiene un costo?</h4>
+              <p>Puedes descargar y utilizar la versión básica de forma gratuita. También contamos con opciones premium que ofrecen características avanzadas.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.6s">
-              <h4>¿Se puede usar la aplicación en múltiples dispositivos?</h4>
-              <p>Sí, puedes instalar la aplicación en varios dispositivos bajo la misma cuenta, lo que te permite mantener tu experiencia y preferencias sincronizadas en todos tus dispositivos.</p>
+              <h4>¿Se puede instalar la aplicación en varios dispositivos?</h4>
+              <p>Sí, puedes instalar la aplicación en diferentes dispositivos con la misma cuenta, permitiendo que tu experiencia y preferencias se sincronicen en todos ellos.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.6s">
               <h4>¿La aplicación consume mucha batería?</h4>
-              <p>Hemos optimizado la aplicación para reducir el consumo de batería, aunque el uso de funciones de realidad aumentada y geolocalización puede requerir más energía en comparación con aplicaciones estándar.</p>
+              <p>Hemos realizado optimizaciones en la aplicación para minimizar el consumo de batería, aunque el uso de funciones como la realidad aumentada y la geolocalización puede requerir más energía que aplicaciones convencionales.</p>
             </div>
           </div>
+        </div>
+        
         </div>
       </div>
     </div>
